--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
-    "types": [],
+    "types": ["jest"],
     "esModuleInterop": true,
     "skipLibCheck": true, // Avoids checking third-party type definitions
     "resolveJsonModule": true, // For importing JSON files if needed
